[package]
name = "agent_keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
lazy_static = "1.5.0"
windows-service = "0.8.0"
cmk-agent-ctl = { path = "../../../packages/cmk-agent-ctl" }

# as in  https://crates.io/crates/windows
[dependencies.windows-sys]
version = "0.59"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
]
