load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "edition",
    build_setting_default = "raw",
    values = [
        "raw",
        "cloud",
        "enterprise",
        "managed",
        "saas",
    ],
)

config_setting(
    name = "raw",
    flag_values = {":edition": "raw"},
)

config_setting(
    name = "cloud",
    flag_values = {":edition": "cloud"},
)

config_setting(
    name = "enterprise",
    flag_values = {":edition": "enterprise"},
)

config_setting(
    name = "managed",
    flag_values = {":edition": "managed"},
)

config_setting(
    name = "saas",
    flag_values = {":edition": "saas"},
)
