host_crates = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

host_crates.from_cargo(
    name = "host_crates",
    cargo_config = "//requirements/rust/host:.cargo/config.toml",
    cargo_lockfile = "//requirements/rust/host:Cargo.lock",
    lockfile = "//requirements/rust/host:Cargo.lock.bazel",
    manifests = [
        "//requirements/rust/host:Cargo.toml",
        "//packages/cmk-agent-ctl:Cargo.toml",
        "//packages/mk-sql:Cargo.toml",
        "//packages/mk-oracle:Cargo.toml",
    ],
    supported_platform_triples = ["x86_64-unknown-linux-gnu"],
)

use_repo(host_crates, "host_crates")

host_crates.annotation(
    crate = "openssl-sys",
    build_script_data = [
        "@openssl//:gen_dir_static",
    ],
    build_script_env = {
        "OPENSSL_DIR": "$(execpath @openssl//:gen_dir_static)",
        "OPENSSL_NO_VENDOR": "1",
        "OPENSSL_STATIC": "1",
    },
    repositories = ["host_crates"],
)

host_crates.splicing_config(
    repositories = ["host_crates"],
    resolver_version = "2",
)
