# host_crates and site_crates share the same Cargo workspace (//:Cargo.toml)
# and therefore the same cargo_lockfile. Each keeps its own Bazel lockfile because
# they target different platform triples and use different OpenSSL providers
# (shared @openssl for site, static @openssl_static for host).
host_crates = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
host_crates.from_cargo(
    name = "host_crates",
    cargo_config = "//:.cargo/config.toml",
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:host.Cargo.lock.bazel",
    manifests = [
        "//:Cargo.toml",
        "//packages/cmk-agent-ctl:Cargo.toml",
        "//packages/mk-sql:Cargo.toml",
        "//packages/mk-oracle:Cargo.toml",
    ],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
)
use_repo(host_crates, "host_crates")
host_crates.annotation(
    build_script_data = [
        "@openssl//:gen_static_dir",
    ],
    build_script_env = {
        "OPENSSL_DIR": "$(execpath @openssl//:gen_static_dir)",
        "OPENSSL_NO_VENDOR": "1",
        "OPENSSL_STATIC": "1",
    },
    crate = "openssl-sys",
    repositories = ["host_crates"],
)
host_crates.splicing_config(
    repositories = ["host_crates"],
    resolver_version = "2",
)
