site_crates = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

site_crates.from_cargo(
    name = "site_crates",
    cargo_lockfile = "//requirements/rust/site:Cargo.lock",
    lockfile = "//requirements/rust/site:Cargo.lock.bazel",
    manifests = [
        "//requirements/rust/site:Cargo.toml",
        "//packages/check-cert:Cargo.toml",
        "//packages/check-http:Cargo.toml",
    ],
    supported_platform_triples = ["x86_64-unknown-linux-gnu"],
)

use_repo(site_crates, "site_crates")

site_crates.annotation(
    crate = "openssl-sys",
    build_script_data = [
        "@openssl//:gen_dir",
    ],
    build_script_env = {
        "OPENSSL_DIR": "$(execpath @openssl//:gen_dir)",
        "OPENSSL_NO_VENDOR": "1",
    },
    repositories = ["site_crates"],
)

site_crates.splicing_config(
    repositories = ["site_crates"],
    resolver_version = "2",
)
