# site_crates and host_crates share the same Cargo workspace (//:Cargo.toml)
# and therefore the same cargo_lockfile. Each keeps its own Bazel lockfile because
# they target different platform triples and use different OpenSSL providers.
site_crates = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
site_crates.from_cargo(
    name = "site_crates",
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:site.Cargo.lock.bazel",
    manifests = [
        "//:Cargo.toml",
        "//packages/check-cert:Cargo.toml",
        "//packages/check-http:Cargo.toml",
    ],
    supported_platform_triples = ["x86_64-unknown-linux-gnu"],
)
use_repo(site_crates, "site_crates")
site_crates.annotation(
    build_script_data = [
        "@openssl//:gen_dir",
    ],
    build_script_env = {
        "OPENSSL_DIR": "$(execpath @openssl//:gen_dir)",
        "OPENSSL_NO_VENDOR": "1",
    },
    crate = "openssl-sys",
    repositories = ["site_crates"],
)
site_crates.annotation(
    crate = "mk-oracle",
    gen_build_script = "off",
    repositories = ["site_crates"],
)
site_crates.splicing_config(
    repositories = ["site_crates"],
    resolver_version = "2",
)
