# Cargo.toml file used to lock the deps for bazel.
#
# See Also:
#    https://earthly.dev/blog/rust-monorepo/

[workspace]
members = [
  "../../../packages/cmk-agent-ctl",
  "../../../packages/mk-sql",
  "../../../packages/mk-oracle",
]
package.edition = "2021"
resolver = "2"

[profile.release.package.cmk-agent-ctl]
opt-level = "z" # Optimize for size.

[workspace.dependencies]
anyhow = "1.0.94"
assert_cmd = "*"
async-trait = "0.1"
bincode = "1.3"
clap = "4.5.22"
derive_more = "1.0"
faccess = "0.2"
flate2 = "1.0"
flexi_logger = { version = "0.29", default-features = false } # extension for log to allow log redirection
futures = "0.3.31"
gethostname = "0.5.0"
hostname-validator = "1.1.1"
http = "1.2"
ipnet = "2.10"
is_elevated = "0.1"
lazy_static = "1.5"
log = "0.4"
mail_slot = "0.1"
nix = "0.29"
odbc-api = "10.0.0"
openssl = "0.10"
os_info = "3.9"
predicates = "*"
rand = "0.8"
rayon = "1.11"
reqwest = "0.12"
rpassword = "7.3"
rustls = { version = "0.23.19", default-features = false }
rustls-pemfile = "2.2"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.11"
socket2 = "0.5"
tempfile = "*"
tiberius = "0.12.3"
tokio = "1.42.0"
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = "0.7.13"
toml = "0.8"
uuid = "1.11"
winapi = "0.3.9"
winreg = "0.52"
x509-parser = "0.16"
yaml-rust2 = "0.9.0"
