package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
)

filegroup(
    name = "ar",
    srcs = ["bin/x86_64-buildroot-linux-gnu-ar"],
)

filegroup(
    name = "cpp",
    srcs = ["bin/x86_64-buildroot-linux-gnu-cpp.br_real"],
)

filegroup(
    name = "gcc",
    srcs = ["bin/x86_64-buildroot-linux-gnu-gcc.br_real"],
)

filegroup(
    name = "gcov",
    srcs = ["bin/x86_64-buildroot-linux-gnu-gcov"],
)

filegroup(
    name = "ld",
    srcs = ["bin/x86_64-buildroot-linux-gnu-ld"],
)

filegroup(
    name = "nm",
    srcs = ["bin/x86_64-buildroot-linux-gnu-nm"],
)

filegroup(
    name = "objdump",
    srcs = ["bin/x86_64-buildroot-linux-gnu-objdump"],
)

filegroup(
    name = "strip",
    srcs = ["bin/x86_64-buildroot-linux-gnu-strip"],
)
