load("@bazel_skylib//rules/directory:directory.bzl", "directory")
# load("@bazel_skylib//rules/directory:subdirectory.bzl", "subdirectory")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
)

directory(
    name = "toolchain_root",
    srcs = glob([
        "lib/**",
        "x86_64-buildroot-linux-gnu/include/**",
    ]),
)

directory(
    name = "x86_64-buildroot-linux-gnu",
    srcs = ["lib/gcc/x86_64-buildroot-linux-gnu/13.3.0"],
)

filegroup(
    name = "ar",
    srcs = ["bin/x86_64-buildroot-linux-gnu-ar"],
)

filegroup(
    name = "cpp",
    srcs = ["bin/x86_64-buildroot-linux-gnu-cpp.br_real"],
)

filegroup(
    name = "gcc",
    srcs = ["bin/x86_64-buildroot-linux-gnu-gcc.br_real"],
)

filegroup(
    name = "gcov",
    srcs = ["bin/x86_64-buildroot-linux-gnu-gcov"],
)

filegroup(
    name = "ld",
    srcs = ["bin/x86_64-buildroot-linux-gnu-ld"],
)

filegroup(
    name = "nm",
    srcs = ["bin/x86_64-buildroot-linux-gnu-nm"],
)

filegroup(
    name = "objdump",
    srcs = ["bin/x86_64-buildroot-linux-gnu-objdump"],
)

filegroup(
    name = "strip",
    srcs = ["bin/x86_64-buildroot-linux-gnu-strip"],
)
